scss/globals.scss
@use './helpers/functions' as *;
@use './helpers/mixins' as *;
@use './helpers/padding-mixins' as *;
@use './helpers/variables' as *;
@use './base/grid' as *;
@use './base/links-buttons' as *;
@use './base/reset' as *;
@use './base/selection-colour' as *;
@use './base/typography' as *;

// stylelint-disable selector-id-pattern
#__next {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  display: flex;
  flex: 1;
  flex-direction: column;
  padding-top: var(--header-height);
}

// Base column styles
.column {
  @include horizontal-half-pad;
  @include vertical-pad-0;
}

// Container
.content-block {
  align-items: flex-start;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

// Hides reCAPTCHA badge
.grecaptcha-badge {
  opacity: 0;
  visibility: hidden !important;
}

img {
  display: block;
  height: auto;
  max-width: 100%;
}

// Wrapper limiter
[data-limit-width] {
  width: to-rem(1280px);
}

// Base section styles
section {
  @include half-pad;

  align-items: flex-start;
  display: flex;
  flex-wrap: wrap;
  overflow: hidden;
}

// Centres single image column content
.single {
  text-align: center;

  img {
    margin: 0 auto;
  }
}

// Travel/Elfsight Load more button
.eapps-instagram-feed-posts-grid-load-more-text {
  @include buttons;

  font: 600 to-rem(18px) $body-font-family;
  line-height: 1;
}

// Animations
.reveal-item,
.reveal-after-text {
  visibility: hidden;
}

.reveal-text .line {
  display: block;
  overflow: hidden;
}

